--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
     <!-- Slider -->
     <div class="slider-container"> 
         <div class="slide active">
-            <img src="/images/slide1.jpg" alt="Slide 1">
+            <img src="images/slide1.jpg" alt="Slide 1">
             <div class="slide-content">
                 <h2>Başlık 1</h2>
                 <p>İçerik açıklaması 1</p>
             </div>
         </div>
         <div class="slide">
-            <img src="/images/slide2.jpg" alt="Slide 2">
+            <img src="images/slide2.jpg" alt="Slide 2">
             <div class="slide-content">
                 <h2>Başlık 2</h2>
                 <p>İçerik açıklaması 2</p>
             </div>
         </div>
         <div class="slide">
-            <img src="/images/slide3.jpg" alt="Slide 3">
+            <img src="images/slide3.jpg" alt="Slide 3">
             <div class="slide-content">
                 <h2>Başlık 3</h2>
                 <p>İçerik açıklaması 3</p>
             </div>
         </div>
         <div class="slide">
-            <img src="/images/slide4.jpg" alt="Slide 4">
+            <img src="images/slide4.jpg" alt="Slide 4">
             <div class="slide-content">
                 <h2>Başlık 4</h2>
                 <p>İçerik açıklaması 4</p>
@@ -87,9 +87,9 @@
 
     <!-- Cards -->
     <div class="card-container">
-        <a href="/sinan.html" class="card">
+        <a href="#" class="card">
             <svg width="100" height="100">
-                <image href="/images/card1.jpg" width="100" height="100" />
+                <image href="./images/card1.jpg" width="100" height="100" />
             </svg>
             <div class="card__content">
                 <p class="card__title">Card 1</p>
@@ -99,7 +99,7 @@
 
         <a href="/card2.html" class="card">
             <svg width="100" height="100">
-                <image href="/images/card2.jpg" width="100" height="100" />
+                <image href="./images/card2.jpg" width="100" height="100" />
             </svg>
             <div class="card__content">
                 <p class="card__title">Card 2</p>
@@ -109,7 +109,7 @@
 
         <a href="/card3.html" class="card">
             <svg width="100" height="100">
-                <image href="/images/card3.jpg" width="100" height="100" />
+                <image href="./images/card3.jpg" width="100" height="100" />
             </svg>
             <div class="card__content">
                 <p class="card__title">Card 3</p>
@@ -119,7 +119,7 @@
 
         <a href="/card4.html" class="card">
             <svg width="100" height="100">
-                <image href="/images/card4.jpg" width="100" height="100" />
+                <image href="./images/card4.jpg" width="100" height="100" />
             </svg>
             <div class="card__content">
                 <p class="card__title">Card 4</p>
@@ -133,7 +133,7 @@
     <div class="card-container">
         <a href="/sinan.html" class="card">
             <svg width="100" height="100">
-                <image href="/images/card1.jpg" width="100" height="100" />
+                <image href="./images/card1.jpg" width="100" height="100" />
             </svg>
             <div class="card__content">
                 <p class="card__title">Card 1</p>
@@ -143,7 +143,7 @@
 
         <a href="/card2.html" class="card">
             <svg width="100" height="100">
-                <image href="/images/card2.jpg" width="100" height="100" />
+                <image href="./images/card2.jpg" width="100" height="100" />
             </svg>
             <div class="card__content">
                 <p class="card__title">Card 2</p>
@@ -153,7 +153,7 @@
 
         <a href="/card3.html" class="card">
             <svg width="100" height="100">
-                <image href="/images/card3.jpg" width="100" height="100" />
+                <image href="./images/card3.jpg" width="100" height="100" />
             </svg>
             <div class="card__content">
                 <p class="card__title">Card 3</p>
@@ -163,7 +163,7 @@
 
         <a href="/card4.html" class="card">
             <svg width="100" height="100">
-                <image href="/images/card4.jpg" width="100" height="100" />
+                <image href="./images/card4.jpg" width="100" height="100" />
             </svg>
             <div class="card__content">
                 <p class="card__title">Card 4</p>
