--- a/kitablar.html
+++ b/kitablar.html
@@ -46,7 +46,7 @@
             <p class="book-title">Kitap Adı 1</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book1.jpg" alt="Kitap 1" class="cover-image">
+                <img src="./images/books/book1.jpg" alt="Kitap 1" class="cover-image">
             </div>
         </div>
     </a>
@@ -55,7 +55,7 @@
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book2.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book2.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
     </a>
@@ -64,7 +64,7 @@
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book3.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book3.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
     </a>
@@ -73,7 +73,7 @@
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book4.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book4.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
     </a>
@@ -81,56 +81,56 @@
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book1.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book1.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
         <div class="book">
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book2.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book2.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
         <div class="book">
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book3.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book3.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
         <div class="book">
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book4.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book4.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
         <div class="book">
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book1.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book1.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
         <div class="book">
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book2.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book2.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
         <div class="book">
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book3.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book3.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
         <div class="book">
             <p class="book-title">Kitap Adı 2</p>
             <p class="book-author">Yazar Adı</p>
             <div class="cover">
-                <img src="/images/books/book4.jpg" alt="Kitap 2" class="cover-image">
+                <img src="./images/books/book4.jpg" alt="Kitap 2" class="cover-image">
             </div>
         </div>
         <!-- Diğer kartlar için aynı yapıyı tekrarlayın -->
